[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/fonts/actual/base/font_small_button.tres" type="DynamicFont" id=1]
[ext_resource path="res://mods-unpacked/otDan-BetterModList/ui/menus/pages/mods/parts/mod_info_container.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/actual/base/font_smallest_text.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/fonts/actual/base/font_menus.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/fonts/actual/base/font_small_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/themes/panel/panel_style.tres" type="StyleBox" id=6]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=7]
[ext_resource path="res://resources/fonts/actual/base/font_small_title.tres" type="DynamicFont" id=8]

[node name="ModInfoContainer" type="PanelContainer"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.580392 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1902.0
margin_bottom = 1062.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1894.0
margin_bottom = 1054.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1889.0
margin_bottom = 1049.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1868.0
margin_bottom = 1028.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1852.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1852.0
margin_bottom = 45.0

[node name="ModName" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 221.0
margin_bottom = 45.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "MOD_NAME"

[node name="ModVersion" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 225.0
margin_right = 1852.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 8 )
text = "MOD_VERSION"
align = 2
valign = 1

[node name="ModWebsite" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 49.0
margin_right = 1852.0
margin_bottom = 75.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "MOD_WEBSITE"
text = "MOD_WEBSITE"
fit_content_height = true

[node name="ModAuthor" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 79.0
margin_right = 1852.0
margin_bottom = 104.0
size_flags_horizontal = 11
size_flags_vertical = 5
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_fonts/font = ExtResource( 3 )
text = "MOD_AUTHOR"
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 1852.0
margin_bottom = 922.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ModDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1852.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "MOD_DESCRIPTION"
text = "MOD_DESCRIPTION"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 937.0
margin_right = 1852.0
margin_bottom = 1012.0

[node name="DependecyContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 924.0
margin_bottom = 75.0
size_flags_horizontal = 7
size_flags_vertical = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DependecyContainer"]
margin_right = 924.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
text = "MOD_DEPENDENCIES"

[node name="ModDependencies" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DependecyContainer"]
unique_name_in_owner = true
margin_top = 49.0
margin_right = 924.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "MOD_DEPENDENCY"
text = "MOD_DEPENDENCY"
fit_content_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1852.0
margin_top = 75.0
margin_right = 1852.0
margin_bottom = 75.0
size_flags_horizontal = 10
size_flags_vertical = 10
alignment = 1

[node name="ShowLogsButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_right = 184.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 8 )
text = "SHOW_LOGS"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 1033.0
margin_right = 1910.0
margin_bottom = 1070.0
custom_fonts/font = ExtResource( 1 )
text = "MOD_CONFIG"

[connection signal="meta_clicked" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/ModWebsite" to="." method="_on_ModWebsite_meta_clicked"]
